hphp/test/zend/good/tests/lang/catchable_error_001.php.expectf

Catchable fatal error: Argument 1 passed to blah() must be an instance of Foo, stdClass given in %s/catchable_error_001.php on line 15
